# GameEngineNet

./: .gitignore  README.md
GameHost/: App.xaml.cs  GameHost.sln  MainWindow.xaml  MainWindow.xaml.cs
GameHost/Interop/: HazelNative.cs
GameHost/Logging/: LogEntry.cs  NativeLogSink.cs
native/: CMakeLists.txt
native/HazelBridge/: hazel_bridge.h  hazel_entry_bridge.cpp  logging_bridge.h
scripts/: build_native.ps1
